src/test/deca/context/invalid/pierre/objects/extendsItself.deca
class A extends A {
    boolean nok;
}
{}